# loxide

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  NOTES.md  README.md  justfile  test.lox  your_program.sh
.codecrafters/: run.sh
.config/: nextest.toml
.github/workflows/: check.yml  test.yml
crates/ast/: Cargo.toml
crates/lexer/: Cargo.toml
crates/loxide/: Cargo.toml
crates/loxide/src/: builtins.rs  interpreter.rs  lib.rs  main.rs  value.rs
crates/loxide/tests/: main_test.rs
crates/loxide/tests/fixtures/: parser.lox  run_error_undefined_var.lox
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: eval_parser_test.rs
crates/parser/tests/snapshots/: eval_parser_test__parser_arimethic@16 * 38 __ 58;.snap  eval_parser_test__parser_arimethic@52 + 80 - 94;.snap  eval_parser_test__parser_comparison@52 <= 80 >= 94;.snap  eval_parser_test__parser_comparison@83 < 99 > 115;.snap  eval_parser_test__parser_equality@"baz" == "baz";.snap  eval_parser_test__parser_equality@10 != 9;.snap  eval_parser_test__parser_error@(72 +);.snap  eval_parser_test__parser_literals@false;.snap  eval_parser_test__parser_literals@nil;.snap  eval_parser_test__parser_literals@true;.snap  eval_parser_test__parser_parentheses@("foo");.snap  eval_parser_test__parser_parentheses@((true));.snap  eval_parser_test__parser_parentheses@(1);.snap  eval_parser_test__parser_unary@!false;.snap  eval_parser_test__parser_unary@!true;.snap  eval_parser_test__parser_unary@-10;.snap
src/: builtins.rs  eval.rs  eval_parser.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  run.rs  value.rs
tests/: eval_parser_test.rs  eval_test.rs  lexer_test.rs  main_test.rs  parser_test.rs
tests/fixtures/: evaluate.lox  evaluate_error.lox  lexer.lox  lexer_error.lox  parser.lox  parser_error.lox  run.lox  run_error.lox  run_error_illegal_call.lox  run_error_incorrect_arity.lox  run_error_must_be_a_number.lox  run_error_undefined_var.lox  run_error_var.lox  run_for.lox  run_if.lox  run_logical.lox  run_while.lox
tests/snapshots/: eval_parser_test__parser_arimethic@16 * 38 __ 58.snap  eval_parser_test__parser_arimethic@52 + 80 - 94.snap  eval_parser_test__parser_comparison@52 <= 80 >= 94.snap  eval_parser_test__parser_comparison@83 < 99 > 115.snap  eval_parser_test__parser_equality@"baz" == "baz".snap  eval_parser_test__parser_equality@10 != 9.snap  eval_parser_test__parser_error@(72 +).snap  eval_parser_test__parser_literals@false.snap  eval_parser_test__parser_literals@nil.snap  eval_parser_test__parser_literals@true.snap  eval_parser_test__parser_parentheses@("foo").snap  eval_parser_test__parser_parentheses@((true)).snap  eval_parser_test__parser_parentheses@(1).snap  eval_parser_test__parser_unary@!false.snap  eval_parser_test__parser_unary@!true.snap  eval_parser_test__parser_unary@-10.snap  eval_test__eval_errors@"foo" * 42.snap  eval_test__eval_errors@"foo" + true.snap  eval_test__eval_errors@"foo" - "bar".snap  eval_test__eval_errors@"foo" < false.snap  eval_test__eval_errors@("foo" * "bar").snap  (+126 more)
(+11 files in other folders)
