[workspace]
resolver = "3"
members = ["crates/lexer", "./", "crates/parser", "crates/loxide"]


[workspace.package]
version = "0.1.0"
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT"
keywords = ["rust", "lox", "interpreter"]
homepage = "https://github.com/sinon/loxide"
repository = "https://github.com/sinon/loxide"

[workspace.dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
rstest = "0.23.0"
assert_cmd = "2.0.14"
insta = { version = "1.41.1", features = ["yaml"] }

# [dependencies]
# clap = { version = "4.5.23", features = ["derive"] }
# miette = { version = "7.4.0", features = ["fancy"] }


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
